--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -12,8 +12,8 @@ $accent: #9C27B0
 
 $dark: #1D1D1D
 
-$positive: #21BA45
+$positive: #26A69A
 $negative: #C10015
 $info: #31CCEC
 $warning: #F2C037
-$primary: #037905
+$primary: #26A69A
