--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -6,14 +6,13 @@ $typography-font-family: var(--q-theme-font-family, "'Roboto', '-apple-system', 
 $button-font-size: var(--q-theme-btn-font-size, 16px)
 $table-tbody-td-font-size: 16px !default
 $tooltip-fontsize: 15px !default
-$primary: #1976D2
+$primary: #4c6afc
 $secondary: #26A69A
 $accent: #9C27B0
 
-$dark: #1D1D1D
+$dark: #1e1e1e
 
 $positive: #26A69A
 $negative: #C10015
 $info: #31CCEC
 $warning: #F2C037
-$primary: #26A69A
