--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -7,7 +7,7 @@ $button-font-size: var(--q-theme-btn-font-size, 16px)
 $table-tbody-td-font-size: 16px !default
 $tooltip-fontsize: 15px !default
 $primary: #4c6afc
-$secondary: #26A69A
+$secondary: #292a2d
 $accent: #9C27B0
 
 $dark: #1e1e1e
